force-app/main/default/objects/MPM4_BASE__Milestone1_Todo__c/MPM4_BASE__Milestone1_Todo__c.object-meta.xml
<CustomObject>
    <description>To do items for Milestones Plus Project Tasks</description>
    <label>To Do</label>
    <nameField>
        <label>Project Todo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>To Dos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>