force-app/main/default/objects/MPM4_BASE__Milestone1_Todo__c/fields/MPM4_BASE__Complete__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complete</label>
    <type>Checkbox</type>
</CustomField>