force-app/main/default/objects/MPM4_BASE__Milestone1_Todo__c/fields/MPM4_BASE__Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Completed_Date__c</fullName>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>