force-app/main/default/objects/MPM4_BASE__Milestone1_Todo__c/fields/MPM4_BASE__Description__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Description__c</fullName>
    <label>Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>