force-app/main/default/objects/MPM4_BASE__Milestone1_Todo__c/fields/MPM4_BASE__Task__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task</label>
    <referenceTo>MPM4_BASE__Milestone1_Task__c</referenceTo>
    <relationshipName>Project_Task_To_Dos</relationshipName>
    <type>Lookup</type>
</CustomField>